--- a/src/userinterface/CustomerRole/CustomerAreaJPanel.form
+++ b/src/userinterface/CustomerRole/CustomerAreaJPanel.form
@@ -257,6 +257,7 @@
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/icon/MicrosoftTeams-image (1).png"/>
+          <Image iconType="3" name="/icon/CustomerArea-Dhriti.jpg"/>
         </Property>
       </Properties>
       <Constraints>
