--- a/src/userinterface/CustomerRole/CustomerOrderAction.form
+++ b/src/userinterface/CustomerRole/CustomerOrderAction.form
@@ -33,7 +33,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="120" y="20" width="481" height="30"/>
+          <AbsoluteConstraints x="80" y="10" width="481" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -259,12 +259,12 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/icon/MicrosoftTeams-image (2).png"/>
+          <Image iconType="3" name="/icon/CustomerOrderAction-Dhriti.jpg"/>
         </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="400" y="10" width="1070" height="790"/>
+          <AbsoluteConstraints x="10" y="0" width="1460" height="800"/>
         </Constraint>
       </Constraints>
     </Component>
