--- a/src/userinterface/DeliveryManRole/ProcessWorkRequestJPanel.form
+++ b/src/userinterface/DeliveryManRole/ProcessWorkRequestJPanel.form
@@ -105,7 +105,7 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/icon/MicrosoftTeams-image (3).png"/>
+          <Image iconType="3" name="/icon/ProcessWorkRequestJPanel.jpg"/>
         </Property>
       </Properties>
       <Constraints>
